# events

./: .gitignore  Dockerfile  README.md  auto_reminders.py  db.py  entrypoint.sh  mailing.py  mailing_templates.py  main.py  models.py  mtypes.py  mutations.py  mutations_holidays.py  otypes.py  pydoc-markdown.yml  pyproject.toml  queries.py  queries_holidays.py  requirements.txt  types.py  utils.py  uvicorn_config.json
.github/workflows/: formatting.yml
mutations/: __init__.py  event_report.py  events.py  finances.py  holidays.py  reminders.py
queries/: __init__.py  event_report.py  events.py  finances.py  holidays.py
scripts/: change_datetimeperiod_start-end-times.py  db_report.py  fix_end_times.py  member_no_img.py  regenerate_event_codes.py
