[project]
name = "events-subgraph"
version = "1.0.0"
readme = "README.md"

requires-python = ">=3.14"
dependencies = [
    "apscheduler==3.11.2",
    "fastapi==0.135.1",
    "fiscalyear==0.4.0",
    "httpx==0.28.1",
    "prettytable==3.17.0",
    "pymongo==4.16.0",
    "strawberry-graphql[cli]==0.308.2",
]

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
# line too long, unsorted imports, unused imports
extend-select = ["E501", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
